# nasait

./: .gitignore  README.MD  db.sqlite3  pyproject.toml  requirements.txt
acount_user/: admin.py  apps.py  models.py  urls.py  views.py
acount_user/migrations/: 0001_initial.py  0002_announcement.py  0003_delete_announcement.py
backet/: models.py
core/: admin.py  context_processor.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_alter_base_options_alter_materials_options_and_more.py  0002_files.py  0002_news_alter_announcement_options_and_more.py  0002_post.py  0003_alter_base_options_alter_materials_options_and_more.py  0003_alter_base_published_alter_files_published_and_more.py  0003_events.py  0003_remove_post_body_post_full_description_and_more.py  0004_alter_materials_options_alter_organization_options_and_more.py  0004_organizationmedicalprevention_alter_events_image_and_more.py  0004_post_content.py  0004_sitesettings.py  0005_remove_post_content.py  0006_section_subsection_delete_post.py  0007_post_remove_section_is_published_and_more.py  0008_alter_subsection_section_delete_section.py  0010_alter_subsection_content.py  0011_files.py  (+2 more)
djangoProject/: settings.py  urls.py
static/: base.css  carusel.js  script.js  styles.css
staticfiles/: script.js  styles.css  variables.css
templates/: anonce_page.html  carusel.html  event.html  footer.html  head.html  header.html  index.html  legal_framework.html  main.html  news.html  news_page.html  organizations.html  orgia.html  reference_materials.html  specialists.html  subsection_detail.html
(+10 files in other folders)
