[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["nefot <artyom27000@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
billiard = "4.2.1"
celery = "5.4.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
django = "5.1.1"
django-colorfield = "0.11.0"
django-jazzmin = "3.0.1"
django-tinymce = "4.1.0"
idna = "3.10"
kombu = "5.4.2"
pillow = "10.4.0"
prompt-toolkit = "3.0.48"
python-dateutil = "2.9.0.post0"
requests = "2.32.3"
six = "1.16.0"
soupsieve = "2.6"
sqlparse = "0.5.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
vine = "5.1.0"
wcwidth = "0.2.13"
django-ckeditor-5 = "^0.2.15"
django-ckeditor = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
